tests/errors/discard-own-result.ari
fn make_owned(value: i64) -> own i64 {
  return value;
}

fn main() -> i64 {
  make_owned(1);
  return 0;
}
